Ok _this_ should fix the dual scrollbar issue

--- a/frontend/src/app/Settings/Facility/Components/ManageDevices.scss
+++ b/frontend/src/app/Settings/Facility/Components/ManageDevices.scss
@@ -1,5 +1,6 @@
 .device-settings {
   .results-dropdown {
+    overflow-y: hidden;
     position: relative;
   }
 }
